@@ -1,31 +1,94 @@
 package edu.ijse.therapycenter.dao.custom.impl;
 
+import edu.ijse.therapycenter.config.FactoryConfiguration;
 import edu.ijse.therapycenter.dao.custom.TherapistDAO;
+import edu.ijse.therapycenter.entity.Patient;
 import edu.ijse.therapycenter.entity.Therapist;
+import org.hibernate.Session;
+import org.hibernate.Transaction;
 
 import java.sql.SQLException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 public class TherapistDAOImpl implements TherapistDAO {
+
+    private final FactoryConfiguration factoryConfiguration = FactoryConfiguration.getInstance();
+
     @Override
     public boolean save(Therapist therapist) {
-        return false;
+        Transaction transaction = null;
+
+        try (Session session = factoryConfiguration.getSession()) {
+            transaction = session.beginTransaction();
+
+            session.persist(therapist);
+
+            transaction.commit();
+            return true;
+        } catch (Exception e) {
+            if (transaction != null) {
+                transaction.rollback();
+            }
+            e.printStackTrace();
+            return false;
+        }
     }
 
     @Override
     public boolean update(Therapist therapist) {
-        return false;
+        Transaction transaction = null;
+
+        try (Session session = factoryConfiguration.getSession()) {
+            transaction = session.beginTransaction();
+
+            session.merge (therapist);
+
+            transaction.commit();
+            return true;
+        } catch (Exception e) {
+            if (transaction != null) {
+                transaction.rollback();
+            }
+            e.printStackTrace();
+            return false;
+        }
     }
 
     @Override
     public boolean deleteByPK(String pk) throws Exception {
-        return false;
+        Transaction transaction = null;
+
+        try (Session session = factoryConfiguration.getSession()) {
+            transaction = session.beginTransaction();
+
+            Therapist therapist = session.get(Therapist.class, pk);
+            if (therapist != null) {
+                session.remove(therapist);
+            } else {
+                return false;
+            }
+
+            transaction.commit();
+            return true;
+        } catch (Exception e) {
+            if (transaction != null) {
+                transaction.rollback();
+            }
+            e.printStackTrace();
+            return false;
+        }
     }
 
     @Override
     public List<Therapist> getAll() {
-        return List.of();
+        try (Session session = FactoryConfiguration.getInstance().getSession()) {
+            return session.createQuery("FROM Therapist ", Therapist.class).list();
+        } catch (Exception e) {
+            e.printStackTrace();
+            return Collections.emptyList();
+        }
     }
 
     @Override
@@ -35,7 +98,28 @@ public class TherapistDAOImpl implements TherapistDAO {
 
     @Override
     public Optional<String> getLastPK() {
-        return Optional.empty();
+        Session session = null;
+        try {
+            session = factoryConfiguration.getSession();
+            Long lastPk = session
+                    .createQuery("SELECT p.id FROM Therapist p ORDER BY p.id DESC", Long.class)
+                    .setMaxResults(1)
+                    .uniqueResult();
+
+            Long newPk = (lastPk != null) ? lastPk + 1 : 1;
+
+            System.out.println(newPk);
+
+            return Optional.of(String.valueOf(newPk));
+
+        } catch (Exception e) {
+            e.printStackTrace();
+            return Optional.empty();
+        } finally {
+            if (session != null) {
+                session.close();
+            }
+        }
     }
 
     @Override
